[gd_scene load_steps=26 format=3 uid="uid://cvk5t5c7vvgv6"]

[ext_resource type="Shader" path="res://Assets/Effects/on_hit_flash.gdshader" id="1_4ypjl"]
[ext_resource type="Script" path="res://Scripts/Enemies/FlailSkeleton/flail_skeleton.gd" id="1_f6r1p"]
[ext_resource type="Texture2D" uid="uid://cyuinmnunmfx1" path="res://Assets/Enemies/ENEMY_SKELETON.png" id="2_e6jih"]
[ext_resource type="Script" path="res://Scripts/States/State Control.gd" id="3_b4qnn"]
[ext_resource type="Script" path="res://Scripts/States/EnemyIdle.gd" id="3_h1s6u"]
[ext_resource type="Script" path="res://Scripts/States/EnemyAttack.gd" id="5_gev0g"]
[ext_resource type="Script" path="res://Scripts/Enemies/FlailSkeleton/EnemyChaseSkeleton.gd" id="6_nnboq"]
[ext_resource type="Script" path="res://Scripts/Hitboxes/Hitbox.gd" id="7_ifxcb"]
[ext_resource type="Script" path="res://Scripts/Hitboxes/Hurtbox.gd" id="8_0m26a"]
[ext_resource type="AudioStream" uid="uid://clf1npumucsf3" path="res://Assets/Sounds/Enemies/478271__joao_janz__8-bit-explosion-1_4.wav" id="11_2rcqg"]
[ext_resource type="AudioStream" uid="uid://bihw5plpyvxx6" path="res://Assets/Sounds/Enemies/Slime/353250__zuzek06__slimejump.wav" id="11_5x0ml"]
[ext_resource type="AudioStream" uid="uid://dmggj3bb1d1jy" path="res://Assets/Sounds/Enemies/Slime/524952__magnuswaker__squelch-2.wav" id="12_mct7x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u6lgf"]
resource_local_to_scene = true
shader = ExtResource("1_4ypjl")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tyh7b"]
radius = 8.75
height = 20.0

[sub_resource type="Animation" id="Animation_7shn8"]
resource_name = "Attack"
length = 1.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Attack1 Hitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.466667, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Attack2 Hitbox/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.866667, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_nwmiq"]
resource_name = "Death"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1), Vector2i(9, 1), Vector2i(10, 1), Vector2i(11, 1), Vector2i(12, 1), Vector2i(13, 1), Vector2i(14, 1), Vector2i(15, 1), Vector2i(16, 1), Vector2i(17, 1)]
}

[sub_resource type="Animation" id="Animation_6s8tn"]
resource_name = "Idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_a3g8w"]
resource_name = "OnHit"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [54]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Attack1 Hitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Attack2 Hitbox/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.5, 0.0]
}

[sub_resource type="Animation" id="Animation_ko4nu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Attack2 Hitbox/CollisionPolygon2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Attack1 Hitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7asvx"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [36, 37]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wsuqd"]
_data = {
"Attack": SubResource("Animation_7shn8"),
"Death": SubResource("Animation_nwmiq"),
"Idle": SubResource("Animation_6s8tn"),
"OnHit": SubResource("Animation_a3g8w"),
"RESET": SubResource("Animation_ko4nu"),
"Walk": SubResource("Animation_7asvx")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_06kw0"]
height = 22.5

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_njnuu"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("11_2rcqg")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sg5um"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("11_5x0ml")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1wtfh"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("12_mct7x")

[node name="Flail_Skeleton" type="CharacterBody2D" groups=["Enemies"]]
position = Vector2(0, -5.96046e-08)
scale = Vector2(0.8, 0.8)
motion_mode = 1
script = ExtResource("1_f6r1p")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_u6lgf")
position = Vector2(0.075, 0.955)
texture = ExtResource("2_e6jih")
offset = Vector2(0, -16)
hframes = 18
vframes = 4
frame = 18
region_rect = Rect2(9, 208, 33, 33)

[node name="Attack1 Hitbox" type="Area2D" parent="Sprite2D"]
script = ExtResource("7_ifxcb")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite2D/Attack1 Hitbox"]
position = Vector2(53.75, 35)
scale = Vector2(0.736377, 0.794167)
polygon = PackedVector2Array(-103.649, -64.1616, -96.8594, -53.1437, -81.5819, -46.8478, -64.6068, -46.8478, -52.7244, -51.5698, -45.9344, -59.4396, -44.2369, -65.7355, -45.9344, -73.6054, -47.6319, -81.4753, -61.2119, -81.4753, -66.3044, -70.4575, -62.9094, -67.3095, -74.7919, -59.4396, -90.0694, -57.8657)
disabled = true

[node name="Attack2 Hitbox" type="Area2D" parent="Sprite2D"]
script = ExtResource("7_ifxcb")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite2D/Attack2 Hitbox"]
position = Vector2(11.175, 24.045)
polygon = PackedVector2Array(5, -47.5, 7.5, -42.5, 7.5, -37.5, 5, -32.5, 0, -27.5, -7.5, -26.25, -11.25, -25, -17.5, -25, -25, -27.5, -31.25, -27.5, -33.75, -30, -32.5, -37.5, -28.75, -41.25, -22.5, -38.75, -12.5, -35, -6.25, -35, 0, -37.5, 3.75, -42.5)
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(3.8147e-06, -10)
shape = SubResource("CapsuleShape2D_tyh7b")

[node name="State Control" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_b4qnn")
initial_state = NodePath("EnemyIdle")

[node name="EnemyIdle" type="Node" parent="State Control" node_paths=PackedStringArray("enemy")]
script = ExtResource("3_h1s6u")
enemy = NodePath("../..")
detection_range = 120

[node name="EnemyChase" type="Node" parent="State Control" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_nnboq")
enemy = NodePath("../..")

[node name="EnemyAttack" type="Node" parent="State Control" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_gev0g")
enemy = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wsuqd")
}

[node name="Hurtbox" type="Area2D" parent="."]
light_mask = 0
visibility_layer = 2
script = ExtResource("8_0m26a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-3.38813e-21, -10)
shape = SubResource("CapsuleShape2D_06kw0")
debug_color = Color(0, 0.615686, 0, 0.419608)

[node name="death_sfx" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_njnuu")
volume_db = 6.0

[node name="walk_sfx" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -2)
stream = SubResource("AudioStreamRandomizer_sg5um")
volume_db = -10.0

[node name="ouch_sfx" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_1wtfh")
volume_db = -5.0

[node name="attack_sfx" type="AudioStreamPlayer2D" parent="."]
